--- a/public/index.html
+++ b/public/index.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
     <meta name="theme-color" content="#000000" />
-    <meta name="description" content="Chat like it's 1989." />
+    <meta name="description" content="Chat like it's 1989 :)" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <title>Swapchat 2.0</title>
   </head>
